update font ticket

--- a/fundraising/templates/fundraising/base.html
+++ b/fundraising/templates/fundraising/base.html
@@ -23,7 +23,10 @@
                 <img src="https://iili.io/f8JutCG.png" alt="Logo" class="d-inline-block align-text-top me-2" width="60"
                     height="60">
             </a>
-            <h3 class="text-white">Sinh Viên Công Giáo An Thượng</h3>
+            <div class="d-flex flex-column">
+                <h4 class="text-white">Sinh Viên Công Giáo An Thượng</h4>
+                <div class="text-white">Chúc Mừng Năm Mới 2026</div>
+            </div>
         </div>
     </nav>
 
