--- a/fundraising/templates/fundraising/base.html
+++ b/fundraising/templates/fundraising/base.html
@@ -9,6 +9,7 @@
     <title>Vé Số Gây Quỹ - SVCG An Thượng</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
@@ -18,14 +19,21 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-orange">
-        <div class="container d-flex flex-nowrap justify-content-start align-items-center">
-            <a class="" href="{% url 'index' %}">
-                <img src="https://iili.io/f8JutCG.png" alt="Logo" class="d-inline-block align-text-top me-2" width="60"
-                    height="60">
-            </a>
-            <div class="d-flex flex-column">
-                <div class="text-white fw-bold" style="font-size: 1.1rem;">Sinh Viên Công Giáo An Thượng</div>
-                <div class="text-white">Chúc Mừng Năm Mới 2026</div>
+        <div class="container d-flex flex-nowrap justify-content-between align-items-center"
+            style="position: relative;">
+            <div class="d-flex flex-nowrap align-items-center">
+                <a class="" href="{% url 'index' %}">
+                    <img src="https://iili.io/f8JutCG.png" alt="Logo" class="d-inline-block align-text-top me-2"
+                        width="60" height="60">
+                </a>
+                <div class="d-flex flex-column">
+                    <div class="text-white fw-bold" style="font-size: 1.1rem;">Sinh Viên Công Giáo An Thượng</div>
+                    <div class="text-white">Chúc Mừng Năm Mới 2026</div>
+                </div>
+            </div>
+            <div style="position: absolute; right: 0px;">
+                <img src="https://poster.vn/wp-content/uploads/2025/11/Vector-ngua-chibi-tet-2026-9-696x445.png.webp"
+                    alt="" height="64">
             </div>
         </div>
     </nav>
