--- a/fundraising/templates/fundraising/base.html
+++ b/fundraising/templates/fundraising/base.html
@@ -19,8 +19,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-orange">
-        <div class="container d-flex flex-nowrap justify-content-between align-items-center"
-            style="position: relative;">
+        <div class="container d-flex flex-nowrap justify-content-between align-items-center">
             <div class="d-flex flex-nowrap align-items-center">
                 <a class="" href="{% url 'index' %}">
                     <img src="https://iili.io/f8JutCG.png" alt="Logo" class="d-inline-block align-text-top me-2"
@@ -30,10 +29,6 @@
                     <div class="text-white fw-bold" style="font-size: 1.1rem;">Sinh Viên Công Giáo An Thượng</div>
                     <div class="text-white">Chúc Mừng Năm Mới 2026</div>
                 </div>
-            </div>
-            <div style="position: absolute; right: 0px;">
-                <img src="https://poster.vn/wp-content/uploads/2025/11/Vector-ngua-chibi-tet-2026-9-696x445.png.webp"
-                    alt="" height="64">
             </div>
         </div>
     </nav>
